Только lib, assets, src с содержимым

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-# Игнорировать всё по умолчанию
+# Игнорировать всё
 *
 
-# Исключить нужные директории
-!/lib/
-!/assets/
-!/src/
+# Разрешить папки с содержимым
+!lib/**
+!assets/**
+!src/**
 
-# Исключить обязательные файлы Flutter
+# Разрешить обязательные файлы
+!.gitignore
 !pubspec.yaml
 !pubspec.lock
 !README.md
-!.gitignore
-!.metadata
